# wgmi_opengl

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
apps/: CMakeLists.txt
apps/spinning_wgmi/: CMakeLists.txt
apps/spinning_wgmi/include/: memes.hpp  mesh.hpp  model.hpp  renderer.hpp  scene.hpp  shapes.hpp
apps/spinning_wgmi/res/shaders/: shader.frag  shader.vert
apps/spinning_wgmi/src/: cubemap.cpp  euler_camera.cpp  framebuffer.cpp  main.cpp  mesh.cpp  model.cpp  renderer.cpp  scene.cpp  shapes.cpp
cmake/: copy_resources.cmake
lib/: CMakeLists.txt
lib/chicken3421/: CMakeLists.txt
